# tricor

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
docs/: algorithm.md  api.md  conf.py  examples.md  generation.md  index.md  quickstart.md  visualization.md
docs/algorithm/: g3_distribution.md  index.md  supercell_generation.md  target_g3.md
docs/api/: coordination_shell_target.md  g3_distribution.md  index.md  supercell.md
docs/jupyter_execute/: examples.ipynb
src/tricor/: __init__.py  _g3_numba.py  _grain.py  _monte_carlo.py  _plotting.py  _shell_relax.py  _thermal_mc.py  g3.py  g3_compare_widget.py  g3_widget.py  shells.py  structure_widget.py  supercell.py
src/tricor/static/: g2_viewer.html  g3_compare.css  g3_compare.js  g3_explorer.css  g3_explorer.js  g3_viewer.html  overview_viewer.html  structure_viewer.css  structure_viewer.js  trajectory_viewer.html
