[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tricor"
version = "0.1.0"
description = "Construct disordered-to-ordered atomic supercells from 3 body distributions."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "matplotlib",
    "ase",
    "anywidget",
]

[project.optional-dependencies]
data = [
    "h5py",
    "zarr",
]

[tool.hatch.build]
include = [
    "src/tricor/static/*.js",
    "src/tricor/static/*.css",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tricor"]
